--- a/MEDVBiServ/wwwroot/index.html
+++ b/MEDVBiServ/wwwroot/index.html
@@ -33,11 +33,15 @@
         <a href="" class="reload">Reload</a>
         <a class="dismiss">🗙</a>
     </div>
+
+    <script src="js/medv-presenter.js"></script>
     <script src="_framework/blazor.webassembly.js"></script>
     <!-- Important: Increment the version parameter whenever you update MudBlazor to prevent caching issues -->
     <script src="_content/MudBlazor/MudBlazor.min.js?v=1"></script>
 
     <script>navigator.serviceWorker.register('service-worker.js');</script>
+
+
 </body>
 
 </html>
