--- a/MEDVBiServ/wwwroot/index.html
+++ b/MEDVBiServ/wwwroot/index.html
@@ -34,7 +34,11 @@
         <a class="dismiss">🗙</a>
     </div>
 
+    <script src="js/medv-files.js"></script>
     <script src="js/medv-presenter.js"></script>
+    <script src="js/medv-handle-store.js"></script>
+    <script src="js/medv-filesystem.js"></script>
+    <script src="js/medv-project-db.js"></script>
     <script src="_framework/blazor.webassembly.js"></script>
     <!-- Important: Increment the version parameter whenever you update MudBlazor to prevent caching issues -->
     <script src="_content/MudBlazor/MudBlazor.min.js?v=1"></script>
