feat(MEDVBiServ): Benachrichtungsseite hinzugefügt

--- a/MEDVBiServ/wwwroot/index.html
+++ b/MEDVBiServ/wwwroot/index.html
@@ -39,6 +39,9 @@
     <script src="js/medv-handle-store.js"></script>
     <script src="js/medv-filesystem.js"></script>
     <script src="js/medv-project-db.js"></script>
+    <script src="js/medvScroll.js"></script>
+    <script src="js/medvStorage.js"></script>
+    <script src="js/medvNet.js"></script>
     <script src="_framework/blazor.webassembly.js"></script>
     <!-- Important: Increment the version parameter whenever you update MudBlazor to prevent caching issues -->
     <script src="_content/MudBlazor/MudBlazor.min.js?v=1"></script>
