--- a/MEDVBiServ/wwwroot/index.html
+++ b/MEDVBiServ/wwwroot/index.html
@@ -42,6 +42,7 @@
     <script src="js/medvScroll.js"></script>
     <script src="js/medvStorage.js"></script>
     <script src="js/medvNet.js"></script>
+    <script src="js/medvNotify.js"></script>
     <script src="_framework/blazor.webassembly.js"></script>
     <!-- Important: Increment the version parameter whenever you update MudBlazor to prevent caching issues -->
     <script src="_content/MudBlazor/MudBlazor.min.js?v=1"></script>
