Improve screen mode typography and add responsive text scaling
- Increased font sizes for screen title and text for better readability on projector
- Implemented responsive scaling using CSS clamp() for dynamic viewport-based sizing
- Improved screen layout with max-height constraints and centered flex alignment
- Prepared foundation for optional auto-fit functionality

--- a/MEDVBiServ/wwwroot/index.html
+++ b/MEDVBiServ/wwwroot/index.html
@@ -43,6 +43,7 @@
     <script src="js/medvStorage.js"></script>
     <script src="js/medvNet.js"></script>
     <script src="js/medvNotify.js"></script>
+    <script src="js/medvPresenterFit.js"></script>
     <script src="_framework/blazor.webassembly.js"></script>
     <!-- Important: Increment the version parameter whenever you update MudBlazor to prevent caching issues -->
     <script src="_content/MudBlazor/MudBlazor.min.js?v=1"></script>
